--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -143,6 +143,19 @@ table {
 	margin-bottom: 30px;
 }
 
+.b {
+    display: block;
+    width: 115px;
+    height: 25px;
+    background: #4E9CAF;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    line-height: 25px;
+}
+
 
 
 
