--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -94,6 +94,10 @@ ul{
 li{
 	display: inline-block;
 	padding: 15px 30px;
+    font-size: 10px;
+    position:absolute;
+    width:10%;
+    height:10px;
 }
 
 a{
