--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -1,165 +1,140 @@
 @charset "ISO-8859-1";
 
-:root {
-    --main-bg-color: #244AAC;
-}
-
 /* login-signup */
 
 * {
-  margin: 0px;
-  padding: 0px;
+    margin: 0px;
+    padding: 0px;
 }
 
 
 .signup-header {
-  width: 30%;
-  margin: 50px auto 0px;
-  color: white;
-  background: var(--main-bg-color);
-  text-align: center;
-  border: 1px solid #B0C4DE;
-  border-bottom: none;
-  border-radius: 10px 10px 0px 0px;
-  padding: 20px;
+    width: 30%;
+    margin: 50px auto 0px;
+    color: white;
+    background:black;
+    text-align: center;
+    border: 1px solid #B0C4DE;
+    border-bottom: none;
+    border-radius: 10px 10px 0px 0px;
+    padding: 20px;
 
 }
 
 form, .content {
-  width: 30%;
-  margin: 0px auto;
-  padding: 20px;
-  border: 1px solid #B0C4DE;
-  background: white;
-  border-radius: 0px 0px 10px 10px;
-  font-size:16px;
+    width: 30%;
+    margin: 0px auto;
+    padding: 20px;
+    border: 1px solid #B0C4DE;
+    background: white;
+    border-radius: 0px 0px 10px 10px;
+    font-size:16px;
 }
 
 .signup-group {
-  margin: 10px 0px 10px 0px;
+    margin: 10px 0px 10px 0px;
 }
 .signup-group label {
-  display: block;
-  text-align: left;
-  margin: 3px;
+    display: block;
+    text-align: left;
+    margin: 3px;
 }
 .signup-group input {
-  height: 30px;
-  width: 93%;
-  padding: 5px 10px;
-  border-radius: 5px;
-  border: 1px solid gray;
-  font-size:14px;
+    height: 30px;
+    width: 93%;
+    padding: 5px 10px;
+    border-radius: 5px;
+    border: 1px solid gray;
+    font-size:14px;
 }
 .signup-btn {
-  padding: 10px;
-  font-size: 15px;
-  color: white;
-  background:var(--main-bg-color);
-  border: none;
-  border-radius: 5px;
+    padding: 10px;
+    font-size: 15px;
+    color: white;
+    background:black;
+    border: none;
+    border-radius: 5px;
 }
 
- mark{
-  color:grey;
-  background:var(--main-bg-color);
-  font-size:26px;
+mark{
+    color:grey;
+    background:black;
+    font-size:26px;
 }
 
 
 /* Navbar */
 
 header{
-	width:100%;
-	height:70px;
-	background-color: var(--main-bg-color);
+    width:100%;
+    height:70px;
+    background-color: black;
 }
 
 h1{
-	position:absolute;
-	padding:3px;
-	float:left;
-	margin-left: 2%;
-	margin-top: 10px;
-	color: white;
+    position:absolute;
+    padding:3px;
+    float:left;
+    margin-left: 2%;
+    margin-top: 10px;
+    color: white;
 }
 
 
 ul{
-	width: auto;
-	float: right;
-	margin-top: 8px;
+    width: auto;
+    margin-top: 8px;
 }
 
 li{
-	display: inline-block;
-	padding: 15px 30px;
-    font-size: 10px;
-    position:absolute;
-    width:10%;
-    height:10px;
+    display: inline-block;
+    padding: 15px 30px;
 }
 
 a{
-	text-align: center;
-	text-decoration: none;
-	color:white;
-	font-size: 1.2vw;
+    text-align: center;
+    text-decoration: none;
+    color:white;
+    font-size: 1.2vw;
 }
 
 a:hover {
-	color: #F0c330;
-	transition: 0.5s;
+    color: #F0c330;
+    transition: 0.5s;
 }
 
 /* Content */
 .tiazon-content{
-	padding-bottom: 50px;
-	padding-top: 50px;	
+    padding-bottom: 50px;
+    padding-top: 50px;
 }
 
 /* Footer */
 .footer{
-	background: var(--main-bg-color);
-	color: white;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	text-align: center;
+    background: black;
+    color: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center;
 }
 
 /* cart */
 table th{
-	text-align: left;
-	background-color: #3a6070;
-	color: white;
-	padding: 4px 30px 4px 8px;
+    text-align: left;
+    background-color: #3a6070;
+    color: white;
+    padding: 4px 30px 4px 8px;
 }
 
 table td{
-	border: 1px solid var(--main-bg-color);
-	padding: 4px 8px;
+    border: 1px solid black;
+    padding: 4px 8px;
 }
 
 table {
-	border-collapse: collapse;
-	width: 100%;
-	margin-top: 30px;
-	margin-bottom: 30px;
+    border-collapse: collapse;
+    width: 100%;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
-
-.b {
-    display: block;
-    width: 115px;
-    height: 25px;
-    background: #4E9CAF;
-    padding: 10px;
-    text-align: center;
-    border-radius: 5px;
-    color: white;
-    font-weight: bold;
-    line-height: 25px;
-}
-
-
-
 
